--- a/Lab01/aboutme.html
+++ b/Lab01/aboutme.html
@@ -12,16 +12,17 @@
         <section>
             <h2>About Me</h2>
             <p>
-                Replace this content with info about you! Share as little or as much as you want about yourself. 
-                This page will be public, so keep that in mind. Do not share anything you aren't comfortable sharing publushing. 
-                You no not need to include your name or any personal identifiable infomration. 
+                Hello! My name is Yaw, and I am a college student studying Information Technology.
+                I am passionate about technology, programming, and problem-solving. As a first-time developer, I am
+                eager to learn new coding concepts and improve my technical skills.
             </p>
         </section>
         <section>
             <h2>Education</h2>
             <p>
                 
-             Put information here about what you are studing. 
+             I am currently studying Information Technology in college. My course includes programming, networking, and software 
+             development. 
                 
                 </p>
         </section>
@@ -29,7 +30,8 @@
             <h2>Skills/Hobbies</h2>
             <p>
 
-                Write about any skills or hobbies you have here. 
+                In my free time, I enjoy playing video games and soccer. I also have an interest in day trading and am currently learning more
+                about financial market. Additionally, I am also improving on my programming skills by working on small projects.
 
             </p>
         </section>
