--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 
         #container {
             display: grid;
+            align-items: center;
+            justify-items: center;
         }
 
         #image-container {
